# nfl-data-api

./: .gitignore  .railway.toml  CLAUDE.md  PLANS.md  Procfile  README.md  examine_parquet.py  load_data.py  nfl_data_schemas.txt  pyproject.toml  requirements.txt  run.py  situational-debug.py  test_endpoints.sh
cache/: depth_charts_condensed.parquet  injuries_condensed.parquet  players_condensed.parquet  rosters_condensed.parquet  weekly_stats_condensed.parquet
debug_situation_stats/: debug_script.sh
scripts/: test_player_endpoints.sh
src/: etl_refresh.py  repomix-output.txt
src/data/: teams_colors_logos.csv
src/nfl_data/: __init__.py  config.py  data_import.py  data_loader.py  etl_refresh.py  main.py  pbp_schema.txt  player_analysis.py  player_cache.py  qb_helpers.py  rb_helpers.py  schema_check.py  stats_helpers.py  wr_helpers.py
src/nfl_data/endpoints/: README.md  __init__.py  compare.py  game.py  player.py  player_stats.py  qb.py  team.py  utility.py
src/tools/: etl_refresh.py  testing.ipynb
tests/: test_api.py  test_integration.py  test_main.py  test_qb_rushing.py  test_stats_helpers.py
