[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-data-api"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "NFL Data API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "gunicorn==21.2.0",
    "requests==2.31.0",
    "python-dateutil==2.8.2",
    "pydantic>=1.8.2",
    "python-multipart>=0.0.5",
    "aiofiles>=0.7.0",
    "httpx==0.26.0",
    "pyarrow>=14.0.1",
    "fastparquet>=2024.2.0",
    "requests-cache>=1.1.0",
    "redis>=4.2.0rc1,<5.0.0",
    "pip>=25.0.1",
    "fastapi-cache2[redis]>=0.1.9",
    "appdirs>=1.4.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["nfl_data"]

[tool.pytest]
testpaths = ["tests"]
